added client side keypairs to participant summary

--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -64,18 +64,27 @@
                         <pre class="errorDiv" id="participantKeysErrorOutput"></pre>
                         <pre id="participantKeysStandardOutput"></pre>
                     </div>
+                </div>
+                <div class="row px-2">
+                    <div class="col section">
+                        <h5>Client Side Keypairs</h5>
+                        <pre class="errorDiv" id="keyPairsErrorOutput"></pre>
+                        <pre id="keyPairsStandardOutput"></pre>
+                    </div>
+                </div>
+                <div class="row px-2">
                     <div class="col section">
                         <h5>Participant Encryption Keys</h5>
                         <pre class="errorDiv" id="encryptionKeysErrorOutput"></pre>
                         <pre id="encryptionKeysStandardOutput"></pre>
                     </div>
-                </div>
-                <div class="row px-2">
                     <div class="col section">
                         <h5>Participant Operator Keys</h5>
                         <pre class="errorDiv" id="operatorKeysErrorOutput"></pre>
                         <pre id="operatorKeysStandardOutput"></pre>
                     </div>
+                </div>
+                <div class="row px-2">
                     <div class="col section">
                         <h5>Participant Opt-out Webhook</h5>
                         <pre class="errorDiv" id="webhooksErrorOutput"></pre>
