--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -4,6 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="../../css/participantSummary.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="#">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
                     <div class="search-container align-items-end">
                         <div class="col">
                             <div class="form-group">
-                                <label for="key">Site Id or Name:</label>
+                                <label for="site-search">Site Id or Name:</label>
                                 <input type="text" class="form-control" id="site-search">
                                 <pre class="errorDiv" id="siteSearchErrorOutput"></pre>
                             </div>
