--- a/webroot/adm/oncall/participant-summary.html
+++ b/webroot/adm/oncall/participant-summary.html
@@ -31,8 +31,7 @@
                                 <input type="text" class="form-control" id="site-search">
                                 <pre class="errorDiv" id="siteSearchErrorOutput"></pre>
                             </div>
-                            <div class="search-autocomplete-results dropdown-menu">
-                            </div>
+                            <div class="search-autocomplete-results dropdown-menu"></div>
                         </div>
                         <div class="col">
                             <a href="#" class="btn btn-primary search-button" id="doSearch">Search</a>
