More clear description in salt rotate

--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -13,9 +13,10 @@
 
 <h3>Inputs</h3>
 
-<label for="minAges">Min ages (seconds):</label>
+<label for="minAges">Min age for salt rotation in seconds, you can specify min,max and we rotate salts in
+    between:</label>
 <input type="text" id="minAges" name="minAges">
-<label for="fraction">Fraction:</label>
+<label for="fraction">Fraction of salts to rotate (between 0 and 1):</label>
 <input type="text" id="fraction" name="fraction">
 
 <br>
