--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -17,6 +17,8 @@
 <input type="text" id="minAges" name="minAges">
 <label for="fraction">Fraction:</label>
 <input type="text" id="fraction" name="fraction">
+<label for="period">Period:</label>
+<input type="text" id="period" name="period ">
 
 <br>
 <br>
@@ -26,6 +28,7 @@
 <ul>
     <li class="ro-sem" style="display: none"><a href="#" id="doSnapshots">List Salt Snapshots</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doRotate">Rotate second level salts (SUPER_USER)</a></li>
+    <li class="ro-sem" style="display: none"><a href="#" id="doSimulate">Run the simulations (SUPER_USER)</a></li>
 </ul>
 
 <br>
@@ -47,6 +50,15 @@
             var minAges = encodeURIComponent($('#minAges').val());
             var fraction = encodeURIComponent($('#fraction').val());
             var url = '/api/salt/rotate?min_ages_in_seconds=' + minAges + '&fraction=' + fraction;
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doSimulate').on('click', function () {
+            var minAges = encodeURIComponent($('#minAges').val());
+            var fraction = encodeURIComponent($('#fraction').val());
+            var period = encodeURIComponent($('#period').val());
+            var url = '/api/salt/simulate?min_ages_in_seconds=' + minAges + '&fraction=' + fraction + '&period=' + period;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
