--- a/webroot/index.html
+++ b/webroot/index.html
@@ -28,6 +28,7 @@ Logged in as <span id="loginEmail"></span>
 
 <hr>
 
+<h3 class="ro-adm" style="display: none">Clients</h3>
 <ul>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/site.html">Site Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/client-side-keypairs.html">Client Side Keypair Management</a></li>
@@ -36,15 +37,17 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-sem" style="display: none"><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
 </ul>
 
+<hr>
+
+<h3 class="ro-adm" style="display: none">Services</h3>
 <ul>
     <li class="ro-adm" style="display: none"><a href="/adm/services.html">Service Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/service-links.html">Service Link Management</a></li>
 </ul>
 
-<ul>
-    <li class="ro-sem" style="display: none"><a href="/adm/salt.html">Salts Management</a></li>
-</ul>
+<hr>
 
+<h3 class="ro-adm" style="display: none">Operators</h3>
 <ul>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/operator-key.html">Operator Key Management</a></li>
     <li class="ro-opm ro-adm" style="display: none"><a href="/adm/enclave-id.html">Enclave ID Management</a></li>
@@ -54,6 +57,16 @@ Logged in as <span id="loginEmail"></span>
     <li class="ro-nil" style="display: none">No Admin Permissions</li>
 </ul>
 
+<hr>
+
+<h3 class="ro-adm" style="display: none">Internal</h3>
+<ul>
+    <li class="ro-sem" style="display: none"><a href="/adm/salt.html">Salts Management</a></li>
+</ul>
+
+<hr>
+
+<h3 class="ro-adm" style="display: none">Deprecated</h3>
 <ul>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/key-acl.html">Deprecated: Encryption Key ACL Management</a></li>
 </ul>
