Fixed login/logout display in UI

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,16 +6,16 @@
 <body>
 <h1>UID2 Env Admin Site</h1>
 
-<div class="notauthed">
+<div class="notauthed" style="display: none">
     <a href="/login">Login</a>
-    <br>
+    <hr>
 </div>
 
-<div class="authed">
+<div class="authed" style="display: none">
     Logged in as <span id="loginEmail"></span>
     <br>
     <a href="/logout">Logout</a>
-    <br>
+    <hr>
 </div>
 
 <div class="ro-nil" style="display: none">
