Fixed roles in UI

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -40,7 +40,7 @@
         <li><a href="/adm/client-side-keypairs.html">Client Side Keypair Management</a></li>
         <li><a href="/adm/client-key.html">Client Key Management</a></li>
         <li><a href="/adm/keysets.html">Keyset Access Management</a></li>
-        <li class="ro-sem"><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
+        <li><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
     </ul>
 
     <hr>
