Standardized HTML filenames

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -37,17 +37,22 @@
     <h3>Clients</h3>
     <ul>
         <li><a href="/adm/site.html">Site Management</a></li>
-        <li><a href="/adm/client-side-keypairs.html">Client Side Keypair Management</a></li>
         <li><a href="/adm/client-key.html">Client Key Management</a></li>
-        <li><a href="/adm/keysets.html">Keyset Access Management</a></li>
+        <li><a href="/adm/client-side-keypair.html">Client Side Keypair Management</a></li>
+    </ul>
+
+    <hr>
+    <h3>Keysets</h3>
+    <ul>
+        <li><a href="/adm/keyset.html">Keyset Access Management</a></li>
         <li><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
     </ul>
 
     <hr>
     <h3>Services</h3>
     <ul>
-        <li><a href="/adm/services.html">Service Management</a></li>
-        <li><a href="/adm/service-links.html">Service Link Management</a></li>
+        <li><a href="/adm/service.html">Service Management</a></li>
+        <li><a href="/adm/service-link.html">Service Link Management</a></li>
     </ul>
 
     <hr>
@@ -56,7 +61,7 @@
         <li><a href="/adm/operator-key.html">Operator Key Management</a></li>
         <li><a href="/adm/enclave-id.html">Enclave ID Management</a></li>
         <li><a href="/adm/enclave-gcp.html">GCP Enclave ID Tool</a></li>
-        <li><a href="/adm/enclave-gcp-v2.html">GCP Enclave ID Tool(V2)</a></li>
+        <li><a href="/adm/enclave-gcp-v2.html">GCP Enclave ID Tool (V2)</a></li>
         <li><a href="/adm/partner-config.html">OptOut Partner Management</a></li>
     </ul>
 
