Added Cloud Encryption Key UI page

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -45,7 +45,7 @@
     <h3>Keysets</h3>
     <ul>
         <li><a href="/adm/keyset.html">Keyset Access Management</a></li>
-        <li><a href="/adm/encryption-key.html">Encryption Key Management</a></li>
+        <li><a href="/adm/encryption-key.html">UID2 Encryption Key Management</a></li>
     </ul>
 
     <hr>
@@ -68,7 +68,8 @@
     <hr>
     <h3>Internal</h3>
     <ul>
-        <li><a href="/adm/salt.html">Salts Management</a></li>
+        <li><a href="/adm/salt.html">Salt Management</a></li>
+        <li><a href="/adm/cloud-encryption-key.html">Cloud Encryption Key Management</a></li>
     </ul>
 
     <hr>
