--- a/webroot/adm/cloud-encryption-key.html
+++ b/webroot/adm/cloud-encryption-key.html
@@ -47,7 +47,21 @@
             {
                 name: "Site",
                 formatter: (cell, row) => {
-                    return gridjs.html(`<span class="${row.cells[4].data}">${cell.siteId} - ${cell.siteName}</span>`)
+                    return gridjs.html(`<span class="${row.cells[4].data}">${formatSite(cell)}</span>`)
+                },
+                sort: {
+                    compare: (a, b) => {
+                        const fullA = formatSite(a);
+                        const fullB = formatSite(b);
+
+                        if (fullA > fullB) {
+                            return 1;
+                        } else if (fullA < fullB) {
+                            return -1;
+                        } else {
+                            return 0;
+                        }
+                    }
                 }
             },
             {
@@ -74,7 +88,7 @@
                 if (cellIndex === 0) {
                     return cell;
                 } else if (cellIndex === 1) {
-                    return `${cell.siteId} - ${cell.siteName}`;
+                    return formatSite(cell);
                 }
             }
         },
@@ -98,7 +112,11 @@
             timeZoneName: "short"
         };
         return date.toLocaleString("en-US", options);
-    }
+    };
+
+    const formatSite = (site) => {
+        return `${site.siteId} - ${site.siteName}`;
+    };
 
     const updateGrid = (grid, data) => {
         const groupedData = data.cloudEncryptionKeys.reduce((acc, key) => {
@@ -124,13 +142,13 @@
         grid
             .updateConfig({ data: gridData })
             .forceRender();
-    }
+    };
 
     const clearGrid = (grid) => {
         grid
             .updateConfig({ data: [] })
             .forceRender();
-    }
+    };
 
     const doList = () => {
         clearGrid(grid);
@@ -149,7 +167,7 @@
                 updateGrid(grid, data);
             }, errorCallback);
         }, errorCallback);
-    }
+    };
 
     $(document).ready(() => {
         $("#doMeta").on("click", () => {
