--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -13,10 +13,18 @@
 
 <h3>Inputs</h3>
 
-<label for="minAges">Min ages (seconds):</label>
-<input type="text" id="minAges" name="minAges">
-<label for="fraction">Fraction:</label>
-<input type="text" id="fraction" name="fraction">
+<div>
+    <label for="fraction">Fraction:</label>
+    <input type="text" id="fraction" name="fraction" style="width: 120px;">
+    
+    <label for="targetDate" style="margin-left: 20px;">Target date:</label>
+    <input type="date" id="targetDate" name="targetDate">
+</div>
+
+<div style="margin-top: 15px;">
+    <label for="minAges">Min ages (seconds):</label><br>
+    <input type="text" id="minAges" name="minAges" style="width: 100%; margin-top: 5px;">
+</div>
 
 <br>
 <br>
@@ -26,6 +34,7 @@
 <ul>
     <li class="ro-sem" style="display: none"><a href="#" id="doSnapshots">List Salt Snapshots</a></li>
     <li class="ro-sem" style="display: none"><a href="#" id="doRotate">Rotate second level salts (SUPER_USER)</a></li>
+    <li class="ro-sem" style="display: none"><a href="#" id="doRotateZero">Rotate zero salts</a></li>
 </ul>
 
 <br>
@@ -39,16 +48,33 @@
 
 <script language="JavaScript">
     $(document).ready(function () {
+        const tomorrow = new Date();
+        tomorrow.setDate(tomorrow.getDate() + 1);
+
+        const defaultTargetDate = tomorrow.getFullYear() + '-' +
+            String(tomorrow.getMonth() + 1).padStart(2, '0') + '-' +
+            String(tomorrow.getDate()).padStart(2, '0');
+        $('#targetDate').val(defaultTargetDate);
+        $('#fraction').val((1/365).toFixed(6));
+
+        // 30 days, 60 days, 90 days... 390 days in seconds
+        $('#minAges').val('2592000,5184000,7776000,10368000,12960000,15552000,18144000,20736000,23328000,25920000,28512000,31104000,33696000');
+
         $('#doSnapshots').on('click', function () {
             doApiCall('GET', '/api/salt/snapshots', '#standardOutput', '#errorOutput');
         });
 
         $('#doRotate').on('click', function () {
-            var minAges = encodeURIComponent($('#minAges').val());
-            var fraction = encodeURIComponent($('#fraction').val());
-            var url = '/api/salt/rotate?min_ages_in_seconds=' + minAges + '&fraction=' + fraction;
+            const minAges = encodeURIComponent($('#minAges').val());
+            const fraction = encodeURIComponent($('#fraction').val());
+            const targetDate = encodeURIComponent($('#targetDate').val());
+            const url = '/api/salt/rotate?min_ages_in_seconds=' + minAges + '&fraction=' + fraction + '&target_date=' + targetDate;
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doRotateZero').on('click', function () {
+            doApiCall('POST', '/api/salt/rotate-zero', '#standardOutput', '#errorOutput');
         });
     });
 </script>
